# function_type_traits

./: CMakeLists.txt  README.md  function_type_traits.hpp  function_type_traits_legacy.hpp  test.cpp
